# gitlab-agent

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  mcp_config.json  mcp_config_local.json  pyproject.toml  temp_issue.json
src/: gitwork.py  model.py  prompts.py  tasks.py  utils.py
src/api/: health.py  hooks.py
